fix: hardcode CORS configuration to allow localhost and Vercel